New ApiGetSchedules handler
